managed sample environment

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=XXXXXXX
 DB_USER=XXXXXXX
-DB_PASSXXXXXXX
+DB_PASS=XXXXXXX
+SENTRY_DSN=https://XXXXXXXXXXXXXXX.ingest.sentry.io/5306601
