--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,15 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
-[{go.mod,go.sum,*.go}]
+[{Makefile,go.mod,go.sum,*.go,.gitmodules}]
 indent_style = tab
 indent_size = 8
+
+[*.md]
+indent_size = 4
+trim_trailing_whitespace = false
+
+eclint_indent_style = unset
+
+[Dockerfile]
+indent_size = 4
