added new variables in .env.example file

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DB_NAME=XXXXXXX
 DB_USER=XXXXXXX
 DB_PASS=XXXXXXX
 SENTRY_DSN=https://XXXXXXXXXXXXXXX.ingest.sentry.io/5306601
+LOG_MAX_SIZE=500
+LOG_MAX_BACKUPS=3
+LOG_MAX_AGE=28
