added the open api documentation for the post resources

--- a/docs/user.yml
+++ b/docs/user.yml
@@ -53,6 +53,51 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+              
+  /posts:
+    get:
+      summary: Returns the list of all the posts
+      description: Makes a call to posts table and fetches all the posts
+      operationId: getPosts
+      responses:
+        '200':
+          description: A JSON array of posts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+        default: 
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    post: 
+      summary: Returns the object of new created post with id
+      description: API to create new post.
+      operationId: addPost
+      requestBody:
+        description: Post that is to be created
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewPost'
+      responses:
+        '200':
+          description: post response
+          content: 
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Post'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Error'
       
                 
 components:
@@ -96,7 +141,29 @@ components:
           format: int32
         message:
           type: string
+          
+    Post:
+      allOf:
+      - $ref: '#/components/schemas/NewPost'
+      - type: object
+        required:
+          - id
+          - title
+          - text
+        properties:
+          id:
+            type: integer
+            format: int64
         
-        
-    
+    NewPost: 
+      type: object
+      required:
+        - title
+        - text
+      properties:
+        title:
+          type: string
+        text:
+          type: string
+
                 
