--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 SERVER_PORT=:5000
+ENVIRONMENT=development
 
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=XXXXXXX
-DB_USER=XXXXXXX
-DB_PASS=XXXXXXX
-SENTRY_DSN=https://XXXXXXXXXXXXXXX.ingest.sentry.io/5306601
+DB_NAME=
+DB_USER=
+DB_PASS=
+SENTRY_DSN=
 LOG_MAX_SIZE=500
 LOG_MAX_BACKUPS=3
 LOG_MAX_AGE=28
