--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-SERVER_PORT=:5000
+SERVER_PORT=6000
 ENVIRONMENT=development
 
-DB_HOST=localhost
+DB_HOST=database
 DB_PORT=3306
-DB_NAME=
-DB_USER=
-DB_PASS=
+DB_NAME=clean_gin
+DB_USER=root
+DB_PASS=secret
 SENTRY_DSN=
-LOG_MAX_SIZE=500
-LOG_MAX_BACKUPS=3
-LOG_MAX_AGE=28
+
+
+ADMINER_PORT=6001
