chore: update env example file

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,17 @@
-# Server Configuration
 SERVER_PORT=6000
-ENVIRONMENT=development
+ENVIRONMENT=local
 
-# Database Configuration
 DB_HOST=database
 DB_PORT=3306
 DB_NAME=clean_gin
 DB_USER=root
 DB_PASS=secret
-
 SENTRY_DSN=
+
 ADMINER_PORT=6001
 
-# Cloud bucket name
 STORAGE_BUCKET_NAME=
 
-# Mail client id
 MAIL_CLIENT_ID=
 MAIL_CLIENT_SECRET=
 MAIL_TOKEN_TYPE=
