--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./docker/web.Dockerfile
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
+      - ${DEBUG_PORT}:2345
     volumes:
       - .:/clean_web
     env_file: .env
