--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     security_opt:
       - seccomp:unconfined
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
   database:
     build:
@@ -26,11 +27,22 @@ services:
       MYSQL_DATABASE: "${DB_NAME}"
       MYSQL_ROOT_HOST: "%"
     container_name: clean-db
-    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci','--default-authentication-plugin=mysql_native_password']
+    command:
+      [
+        "--character-set-server=utf8mb4",
+        "--collation-server=utf8mb4_unicode_ci",
+        "--default-authentication-plugin=mysql_native_password",
+      ]
     ports:
       - 33068:3306
     volumes:
       - clean_db:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: "1s"
+      timeout: "10s"
+      retries: 10
+      start_period: "1s"
 
   adminer:
     image: adminer
@@ -41,11 +53,11 @@ services:
     image: swaggerapi/swagger-ui
     container_name: swagger-ui
     ports:
-        - ${SWAGGER_PORT}:8080
+      - ${SWAGGER_PORT}:8080
     volumes:
-        - ./docs:/usr/share/nginx/html/docs
+      - ./docs:/usr/share/nginx/html/docs
     environment:
-        API_URL: docs/openapi.yaml
+      API_URL: docs/openapi.yaml
 
 volumes:
   clean_db:
