doc: update .env.example DB_TYPE

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ DB_PORT=3306
 DB_NAME=clean_gin
 DB_USER=root
 DB_PASS=secret
+
+# cloudsql, mysql
+DB_TYPE=mysql
+
 SENTRY_DSN=
 
 MAX_MULTIPART_MEMORY=10485760
