feat: use test database when running in test mode

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,12 @@ DB_NAME=clean_gin
 DB_USER=root
 DB_PASS=secret
 
+TEST_DB_HOST=localhost
 TEST_DB_PORT=33068
+TEST_DB_NAME=clean_gin_test
+TEST_DB_USER=root
+TEST_DB_PASS=secret
+TEST_DB_TYPE=mysql
 
 # cloudsql, mysql
 DB_TYPE=mysql
