--- a/.env.example
+++ b/.env.example
@@ -8,15 +8,16 @@ DB_NAME=clean_gin
 DB_USER=root
 DB_PASS=secret
 
-TEST_DB_HOST=localhost
-TEST_DB_PORT=33068
-TEST_DB_NAME=clean_gin_test
-TEST_DB_USER=root
-TEST_DB_PASS=secret
-TEST_DB_TYPE=mysql
-
 # cloudsql, mysql
 DB_TYPE=mysql
+
+# only pass if different from host environment
+TEST_DB_HOST=
+TEST_DB_PORT=
+TEST_DB_NAME=
+TEST_DB_USER=
+TEST_DB_PASS=
+TEST_DB_TYPE=
 
 SENTRY_DSN=
 
