--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ MAX_MULTIPART_MEMORY=10485760
 ADMINER_PORT=5001
 SWAGGER_PORT=8009
 
+ADMIN_EMAIL=XXX@gmail.com
+ADMIN_PASSWORD=XXXXXX
+
 STORAGE_BUCKET_NAME=
 
 MAIL_CLIENT_ID=
