--- a/.github/workflows/aws_ebs_deploy.yml
+++ b/.github/workflows/aws_ebs_deploy.yml
@@ -3,13 +3,40 @@ on:
   push:
     branches:
       - develop
+      - main
+    tags:
+      - v*
   #For manual trigger of workflow.
   workflow_dispatch:
 
+
+
 jobs:
-  deploy:
-    environment: development
+  setup_environment:
     runs-on: ubuntu-latest
+    outputs:
+      env_name: ${{ steps.get_env.outputs.env }}
+    env:
+     GITHUB_REF: ${{ github.ref }}
+    steps:
+
+    - id: get_env
+      run: |
+        if grep -q "refs/tags/v" <<< $GITHUB_REF; then
+          echo "::set-output name=env::PROD"
+        else
+          echo "::set-output name=env::DEV"
+        fi
+    - id: print_env
+      name: Print environment
+      run: echo  "Environment :- ${{ steps.get_env.outputs.env }}"
+
+
+  deploy:
+    name: Build and Deploy Go
+    runs-on: ubuntu-latest
+    needs: setup_environment
+    environment: ${{needs.setup_environment.outputs.env_name}}
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
