--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,8 @@ MAX_MULTIPART_MEMORY=10485760
 ADMINER_PORT=5001
 SWAGGER_PORT=8009
 
-ADMIN_EMAIL=test123@gmail.com
-ADMIN_PASSWORD=test123
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
 
 STORAGE_BUCKET_NAME=
 
