--- a/.github/workflows/gcp_build_and_deploy.yml
+++ b/.github/workflows/gcp_build_and_deploy.yml
@@ -7,6 +7,7 @@ on:
       - main
       - develop
       - staging
+      - DEVOPS-*
     tags:
       - v*
 
@@ -75,7 +76,7 @@ jobs:
 
       - name: Start the service
         run: |
-          ./main &
+          ./main app:serve &
 
       - name: Validate if the service is working or not via health check api
         run: |
@@ -96,22 +97,22 @@ jobs:
           DEBUG_PORT=5002     
           " > .env
 
-      - name: Setup Cloud SDK
-        if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || startsWith(github.ref, 'refs/tags/v')) }}
-        uses: google-github-actions/setup-gcloud@v0.2.0
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
+      # - name: Setup Cloud SDK
+      #   if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || startsWith(github.ref, 'refs/tags/v')) }}
+      #   uses: google-github-actions/setup-gcloud@v0.2.0
+      #   with:
+      #     project_id: ${{ secrets.GCP_PROJECT_ID }}
+      #     service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
       
       # If there is a separate app.yaml for staging separate this step
-      - name: Deploy to App Engine
-        if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || startsWith(github.ref, 'refs/tags/v')) }}
-        run: gcloud app deploy app.yaml --quiet --project ${{secrets.GCP_PROJECT_ID}}
+      # - name: Deploy to App Engine
+      #   if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || startsWith(github.ref, 'refs/tags/v')) }}
+      #   run: gcloud app deploy app.yaml --quiet --project ${{secrets.GCP_PROJECT_ID}}
 
       # Update the service as per app.yaml
-      - name : Delete previous versions of development
-        if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || startsWith(github.ref, 'refs/tags/v')) }}
-        run: gcloud app versions list --project ${{secrets.GCP_PROJECT_ID}} --service="default" --format="value(version.id)" --sort-by="~version.createTime" | tail -n +4 | xargs -r gcloud app versions delete --project ${{secrets.GCP_PROJECT_ID}} --service default --quiet
+      # - name : Delete previous versions of development
+      #   if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging' || startsWith(github.ref, 'refs/tags/v')) }}
+      #   run: gcloud app versions list --project ${{secrets.GCP_PROJECT_ID}} --service="default" --format="value(version.id)" --sort-by="~version.createTime" | tail -n +4 | xargs -r gcloud app versions delete --project ${{secrets.GCP_PROJECT_ID}} --service default --quiet
       
       - name: Slack Notification on SUCCESS
         if: success()
