--- a/.github/workflows/gcp_build_and_deploy.yml
+++ b/.github/workflows/gcp_build_and_deploy.yml
@@ -7,6 +7,7 @@ on:
       - main
       - develop
       - staging
+      - DEVOPS-*
     tags:
       - v*
 
@@ -39,14 +40,19 @@ jobs:
     needs: setup_environment
     environment: ${{needs.setup_environment.outputs.env_name}}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Use golang ${{matrix.go-version}}
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: '^1.18'
       - run: go version
       
+      - name: Perform linting (golangci-lint)
+        uses: golangci/golangci-lint-action@v2
+        with:
+          skip-go-installation: true  
+
       - name: Set up MySQL
         run: |
           sudo systemctl start mysql
