feat: add cognito auth feature

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,10 @@ MAIL_TOKEN_TYPE=
 DEBUG_PORT=5002
 
 TIMEZONE=
+
+# AWS
+AWS_REGION =
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+COGNITO_CLIENT_ID =
+COGNITO_USER_POOL_ID =
