--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,11 @@ STORAGE_BUCKET_NAME=
 DEBUG_PORT=5002
 
 TIMEZONE=
+
+STORAGE_BUCKET_NAME=
+
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+COGNITO_CLIENT_ID=
+COGNITO_USER_POOL_ID=
+AWS_SECRET_ACCESS_KEY=
